[gd_scene load_steps=7 format=2]

[ext_resource path="res://potions/arcane/magic_missile/magic_missile.png" type="Texture" id=1]
[ext_resource path="res://potions/arcane/magic_missile/floaty_64.png" type="Texture" id=2]
[ext_resource path="res://potions/arcane/magic_missile/magic_missile.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -100, 0 )
initial_velocity = 10.0
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
color = Color( 0.121569, 0.988235, 0.937255, 1 )
hue_variation_random = 0.75

[sub_resource type="CircleShape2D" id=3]
radius = 7.0

[node name="MagicMissile" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="Sprite"]
material = SubResource( 1 )
amount = 10
lifetime = 0.25
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_shape_entered" from="." to="." method="_on_MagicMissile_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_MagicMissile_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
